<resources>
    <string name="app_name">Ejercicio_14</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Tareas</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Charming Notes</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ver_pel_culas2">Mis Películas</string>
    <string name="ver_pel_culas3">Quiz Tests</string>
    <string name="a_adir_pel_cula">Añadir Película</string>
    <string name="hint_pelicula">Tarea a añadir...</string>
    <string name="button_save">Guardar</string>
    <string name="g_nero">Género</string>
    <string name="estreno">Estreno</string>
    <string name="modificar">Modificar</string>
    <string name="borrar">Borrar</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="login">Forgot your Password?</string>
    <string name="new_password">New Password</string>
    <string name="a_adir_libro">Añadir libro</string>
    <string name="imagen_libro">Imagen Libro</string>
    <string name="buscar">Buscar</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <!-- Change the following strings as required -->
    <string name="back4app_app_id">ogsKCPLLh7DqkblqxITJVZi3JtJQ5MNjUSKy2405</string>
    <string name="back4app_client_key">4l7yv4tlbAFtSHmpN2RuTnRngjd0jwNCoTo1iKdQ</string>

</resources>